# plusplus

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: release.yml
lib/: CMakeLists.txt  utils.cpp  version.cpp
lib/include/: alloc.h  matrix.h  matrix_iterator.h  print_ip.h  utils.h
src/: CMakeLists.txt  main.cpp
src/app/: app.h  document.h  i_document.h  i_shape.h  shape.h
src/product/: command.cpp  command_proc.cpp  command_proc.h  console_processing.cpp  console_processing.h  file_processing.cpp  file_processing.h  i_observer.h  i_subscriber.h
test/: CMakeLists.txt  test_alloc.cpp  test_matrix.cpp  test_print_ip.cpp  test_version.cpp
